# kobito_agents

./: .gitignore  CLAUDE.md  pyproject.toml  start.bat  start.sh
assets/prompts/: agent_communication.md  shared_instructions.md  task_talk.md  task_work.md
docs/: mockup_phase1.html  mockup_phase2.html  mockup_phase9.html  refactoring_evaluation_after.md  refactoring_evaluation_before.md  spec_phase1.md  spec_phase2.md  spec_phase3.md  spec_phase4.md  spec_phase5.md  spec_phase6.md  spec_phase7.md  spec_phase8.md  spec_phase9.md
src/mcp_server/: ask_agent.py
src/server/: app.py  chat.py  cli_bridge.py  config.py  lmstudio_client.py  log_setup.py  pid_manager.py  scheduler.py  session_reader.py  task_manager.py  team_chat.py  team_session.py
src/tests/: test_api.py  test_app.py  test_chat.py  test_cli_bridge.py  test_config.py  test_dashboard.py  test_e2e_dashboard.py  test_e2e_recurring.py  test_e2e_team.py  test_inferring.py  test_lmstudio_client.py  test_recurring_api.py  test_recurring_task.py  test_scheduler.py  test_session_meta.py  test_session_reader.py  test_task_context.py  test_task_manager.py  test_team_chat.py  (+2 more)
tasks/: task_20260402_120000_b1c.md  task_20260402_130000_c2d.md  task_20260402_140000_d3e.md  task_20260402_160000_94v.md  task_20260403_100000_in9.md  task_20260403_214408_r7r.md  task_20260404_032258_p3s.md  task_20260404_081138_3mt.md  task_20260404_085936_ref.md  task_20260404_103000_cli.md  task_20260404_115642_950.md  task_20260405_160000_p6m.md  task_20260407_120000_tm7.md  task_20260410_120000_p9d.md  task_20260410_130000_p10.md
(+40 files in other folders)
